新增系统日志功能，可以查看和保存系统访问者的操作记录

--- a/secretBlogBoot-admin/src/main/resources/templates/pages/system/log.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/system/log.html
@@ -39,27 +39,41 @@
                 laydate.render({elem: "#startTime", type: "datetime"});
                 laydate.render({elem: "#endTime", type: "datetime"});
 
-                var articleTable = table.render({
+                var logTable = table.render({
                     elem: "#tableId",
-                    url: okMock.api.article.list,
+                    url: '/sysLog/list',
                     limit: 20,
                     page: true,
                     even: true,
                     toolbar: "#toolbarTpl",
                     size: "sm",
+                    request: {
+                        pageName: 'page', //页码的参数名称，默认：page
+                        limitName: 'size' //每页数据量的参数名，默认：limit
+                    },
                     cols: [[
                         {type: "checkbox", fixed: "left"},
-                        {field: "guid", title: "GUID", width: 280, sort: true},
-                        {field: "title", title: "标题", width: 350},
-                        {field: "url", title: "链接", width: 250, templet: "#urlTpl"},
-                        {field: "publisher", title: "发布者", width: 100},
-                        {field: "readSize", title: "阅读量", width: 80},
-                        {field: "isTop", title: "是否置顶", width: 100, align: "center", templet: "#topTpl"},
-                        {field: "status", title: "发布状态", width: 110, align: "center", templet: "#statusTpl"},
+                        {field: "type", title: "日志类型", width: 100, sort: true,templet:'#typeTpl'},
+                        {field: "logLevel", title: "日志级别", width: 100},
+                        {field: "content", title: "日志内容", width: 300},
+                        {field: "params", title: "请求参数", width: 300},
+                        {field: "ip", title: "ip", width: 120},
+                        {field: "requestUrl", title: "请求路径", width: 200, align: "center"},
                         {title: "操作", width: 100, align: "center", fixed: "right", templet: "#operationTpl"}
                     ]],
                     done: function (res, curr, count) {
-                        console.log(res, curr, count)
+                        console.info(res, curr, count);
+                    },
+                    response: {
+                        statusCode: 200 //重新规定成功的状态码为 200，table 组件默认为 0
+                    },
+                    parseData: function(res){ //将原始数据解析成 table 组件所规定的数据
+                        return {
+                            "code": res.status, //解析接口状态
+                            "msg": res.message, //解析提示文本
+                            "count": res.data.total, //解析数据长度
+                            "data": res.data.records //解析数据列表
+                        };
                     }
                 });
 
@@ -172,39 +186,32 @@
         <!-- 头工具栏模板 -->
         <script type="text/html" id="toolbarTpl">
             <div class="layui-btn-container">
-                <button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="batchEnabled">批量上架</button>
-                <button class="layui-btn layui-btn-sm layui-btn-warm" lay-event="batchDisabled">批量下架</button>
+                <!--<button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="batchEnabled">批量上架</button>-->
+                <!--<button class="layui-btn layui-btn-sm layui-btn-warm" lay-event="batchDisabled">批量下架</button>-->
                 <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="batchDel">批量删除</button>
-                <button class="layui-btn layui-btn-sm" lay-event="add">添加文章</button>
+                <!--<button class="layui-btn layui-btn-sm" lay-event="add">添加文章</button>-->
             </div>
         </script>
-        <!-- 链接模板 -->
-        <script type="text/html" id="urlTpl">
-            <a href="{{d.url}}" target="_blank">{{d.url}}</a>
-        </script>
+      
         <!-- 是否指顶模板
             <input type="checkbox" name="isTop" value="{{d.isTop}}" lay-skin="switch" lay-text="是|否" {{ d.isTop== true ? 'checked' : ''}}>
         -->
-        <script type="text/html" id="topTpl">
-            {{#  if(d.isTop == true){ }}
-            <span class="layui-btn layui-btn-normal layui-btn-xs">已置顶</span>
-            {{#  } else if(d.isTop == false) { }}
-            <span class="layui-btn layui-btn-warm layui-btn-xs">未置顶</span>
+        <script type="text/html" id="typeTpl">
+            {{#  if(d.type == 'SYSTEM'){ }}
+            <span class="layui-btn layui-btn-normal layui-btn-xs">系统操作</span>
+            {{#  } else if(d.type == 'VISIT') { }}
+            <span class="layui-btn layui-btn-warm layui-btn-xs">用户访问</span>
+            {{#  } else if(d.type == 'ERROR') { }}
+            <span class="layui-btn layui-btn-warm layui-btn-xs">异常记录</span>
             {{#  } }}
         </script>
         <!-- 发布状态模板
             <input type="checkbox" name="top" value="{{d.status}}" lay-skin="switch" lay-text="已发布|未发布" {{ d.status== true ? 'checked' : ''}}>
         -->
-        <script type="text/html" id="statusTpl">
-            {{#  if(d.status == true){ }}
-            <span class="layui-btn layui-btn-normal layui-btn-xs">已发布</span>
-            {{#  } else if(d.status == false) { }}
-            <span class="layui-btn layui-btn-warm layui-btn-xs">未发布</span>
-            {{#  } }}
-        </script>
+
         <!-- 行工具栏模板 -->
         <script type="text/html" id="operationTpl">
-            <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+            <!--<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>-->
             <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
         </script>
     </body>
